welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: value lenght is not a member of Array[Int]
  var n =nums.lenght
              ^indexOfValue:3: error: not found: value o
  for ( j <- o to n){
             ^indexOfValue:4: error: not found: value i
    if(lookingFor!=nums(i)){
                        ^indexOfValue:7: error: reassignment to val
    else if ( lookingFor=nums(i)){
                        ^indexOfValue:8: error: not found: value i
      return nums (i)
                   ^